--- a/_calc_root.css
+++ b/_calc_root.css
@@ -118,7 +118,7 @@ button {
   padding: 2px;
   margin: 0;
   text-align: center;
-  /* width: 100%; */
+  width: 10%;
 }
 
 .active, .collapsible:hover{
